Refactor: introduce service layer, security filters and DAO improvements